kubernetes/crawler-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: crawler
  name: crawler
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: crawler
    spec:
      containers:
      - env:
        - name: FLASK_ENV
          value: development
        image: asia.gcr.io/speech-251314/covid19-crawler:v2
        imagePullPolicy: Always
        name: crawler
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
