kubernetes/flask-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: flask
    servicePort: 5000
